Petit espace entre paragraphes

--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -39,7 +39,7 @@ les compétences de cœur de métier «Administrer les réseaux et
 l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2).
 Elle contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers la découverte du poste
-client et de son environnement logiciel.\\
+client et de son environnement logiciel.\\[25pt]
 Cette ressource permet à l'étudiant de découvrir et déployer un premier
 système d'information au sein d'une entreprise. À travers des exercices
 de mise en place progressive de réseaux locaux, d'interconnection
@@ -47,7 +47,7 @@ d'équipements et de prise en main des fonctions de base des systèmes
 d'exploitation, l'étudiant découvrira les principaux concepts utilisés
 dans les réseaux informatiques, et commencera à comprendre le rôle et
 les principes des normes et protocoles essentiels des réseaux locaux,
-comme Ethernet, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}.\\
+comme Ethernet, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}.\\[25pt]
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support).\\[3pt]}
