--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -37,7 +37,7 @@
 \ajoutRancrage{Cette ressource a pour objectif de donner à l'étudiant un cadre commun
 et intégratif de l'ensemble des mécanismes nécessaires au fonctionnement
 des réseaux informatiques. Ce cadre général est essentiel, et sert de
-référence à l'ensemble des autres ressources réseaux.\\
+référence à l'ensemble des autres ressources réseaux.\\[25pt]
 Elle participe principalement à la compétence RT1 «Administrer les
 réseaux et l'Internet» à travers la compréhension et l'utilisation de la
 partie réseau des systèmes d'exploitation, la compréhension de
