--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -35,7 +35,7 @@
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier «Administrer les réseaux et
 l'Internet» (RT1) et « Créer des outils et applications informatiques
-pour les R\&T» (RT3).\\
+pour les R\&T» (RT3).\\[25pt]
 Les systèmes informatiques et numériques sont au cœur de la spécialité
 Réseaux et Télécoms. Cette ressource vise tout d'abord à permettre la
 compréhension du codage et du stockage des données. Puis elle permet de
