--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -43,10 +43,10 @@ Elle vise à fournir à l'étudiant les connaissances et les compétences
 indispensables pour pouvoir concevoir, déployer et maintenir les
 infrastructures réseaux grande distance (Internet), plus précisément
 l'adressage, le routage et le transport de paquets. Une première
-approche du filtrage (sécurité) y est aussi abordée.\\
+approche du filtrage (sécurité) y est aussi abordée.\\[25pt]
 Elle contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers la découverte du poste
-client et de son environnement logiciel.\\
+client et de son environnement logiciel.\\[25pt]
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support).\\[3pt]}
