--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -42,7 +42,7 @@ les compétences de cœur de métier «Administrer les réseaux et
 l'Internet» (RT1). Elle donne aux étudiants les compétences pour
 effectuer des tâches simples d'administration du système d'information
 de l'entreprise (processus, utilisateurs, automatisation) et pour
-utiliser des solutions de virtualisation, de conteneurisation.\\
+utiliser des solutions de virtualisation, de conteneurisation.\\[25pt]
 Elle contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers la découverte du poste
 client et de son environnement logiciel.\\[3pt]}
