--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -38,13 +38,13 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte les connaissances et compétences de base
 nécessaires à la mise en oeuvre des services réseaux dans un système
-d'information\\
+d'information\\[25pt]
 Les services abordés sont des services essentiels à tout SI tels que le
 \textabbrv{DNS}, le \textabbrv{DHCP} ou le transfert de fichiers pour les configurations
 d'appareils réseaux pour n'en citer que quelques-uns. Cette découverte
 des premiers protocoles applicatifs permettra également de sensibiliser
 les étudiants aux risques de sécurité liés à la configuration de ces
-services\\
+services\\[25pt]
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
 pourront servir de support).\\[3pt]}
