--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -40,7 +40,7 @@ d'aborder les différents types de téléphonie (hors téléphonie mobile)
 utilisés de nos jours, que ce soit sur un réseau dédié (téléphonie
 analogique, numérique) ou un réseau partagé (\textabbrv{ToIP}). Une découverte des
 services téléphoniques utiles à la communication dans l'entreprise sera
-réalisée, ainsi qu'une première approche des réseaux publics existants.\\
+réalisée, ainsi qu'une première approche des réseaux publics existants.\\[25pt]
 En fonction du contexte local, on pourra orienter l'étude vers un réseau
 téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.\\[3pt]}
 
