--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -36,10 +36,10 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier «Administrer les réseaux et
-l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2)\\
+l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2)\\[25pt]
 La caractérisation du comportement d'un système télécom en fonction de
 la fréquence permet au technicien d'appréhender la notion de bande
-passante et d'introduire celle de canal de transmission.\\
+passante et d'introduire celle de canal de transmission.\\[25pt]
 La représentation spectrale des signaux permet de comprendre quelles
 modifications ces signaux vont subir dans un système télécom.\\[3pt]}
 
