--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -36,7 +36,7 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier «Administrer les réseaux et
-l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2).\\
+l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2).\\[25pt]
 Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
