--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -48,7 +48,7 @@ usage des moyens informatiques.\\[3pt]}
 \ajoutSlivrables{
 Rapport d'analyse des risques numériques et présentation diaporama ou
 conception d'une courte vidéo de sensibilisation (par ex: «en 180
-secondes») destinée à vulgariser les premiers pas en cybersécurité.\\
+secondes») destinée à vulgariser les premiers pas en cybersécurité.\\[25pt]
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
 synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
