--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -68,7 +68,7 @@ On pourra également utiliser les supports~:
 claire, concise et vulgarisée les risques et les bons usages des outils
 numériques tel que pourrait le faire un responsable d'un service
 informatique à un collaborateur néo-entrant dans son entreprise. Cette
-démonstration devra s'accompagner d'exemples concrets.\\
+démonstration devra s'accompagner d'exemples concrets.\\[25pt]
 Cette démonstration pourra se faire sous la forme de présentation orale
 ou écrite et accompagnée de différents média (infographie, affiche,
 vidéo\ldots).\\[3pt]}
