--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -5,7 +5,7 @@
 \nouvelexemple{Qualité de réception de signaux de type radio}
 
 \ajoutESproblematique{Dans un contexte professionnel, comme chez un particulier, les signaux
-radios reçus peuvent être de qualité très variable.\\
+radios reçus peuvent être de qualité très variable.\\[25pt]
 Cette qualité dépend par exemple de la puissance reçue, de la fréquence
 ou de la bande de fréquence à recevoir, des conditions d'environnement,
 de la localisation du récepteur, ou encore de la présence de parasites.\\[3pt]}
