--- a/latex/saes/SAE24_exemple2.tex
+++ b/latex/saes/SAE24_exemple2.tex
@@ -23,10 +23,10 @@ Sa mission consiste à~:
 
 \ajoutESdescription{
 L'étudiant devra installer des équipements réseaux, déployer un serveur
-d'entreprise et les postes clients.\\
+d'entreprise et les postes clients.\\[25pt]
 Il devra ensuite créer une dizaine de comptes utilisateurs ainsi que les
 accès aux fichiers partagés pour quelques postes d'un réseau local. Il
-devra en assurer le bon fonctionnement et la maintenance.\\
+devra en assurer le bon fonctionnement et la maintenance.\\[25pt]
 Il devra également maîtriser le vocabulaire technique en anglais et
 savoir communiquer avec les autres filiales de l'entreprise
 internationale.\\[3pt]
