--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -6,7 +6,7 @@
 
 \ajoutESproblematique{Il est essentiel dans une entreprise, quelle qu'en soit la taille, de
 sensibiliser le personnel avec des exemples simples (et si possible
-spectaculaires), aux conséquences d'une mauvaise hygiène informatique.\\
+spectaculaires), aux conséquences d'une mauvaise hygiène informatique.\\[25pt]
 Il est du rôle du responsable du SI de savoir enseigner les bonnes
 pratiques de la façon la plus simple et la plus convaincante possible.\\[3pt]}
 
