--- a/latex/saes/SAE23_exemple1.tex
+++ b/latex/saes/SAE23_exemple1.tex
@@ -9,7 +9,7 @@ sous forme de sites Web manipulables grâce à un navigateur Web~: elles
 peuvent être destinées à ses collaborateurs pour mettre facilement à
 leur disposition un outil informatique\,; elles peuvent aussi être le
 cœur de métier de son entreprise avec des applications destinées à des
-clients/commanditaires.\\
+clients/commanditaires.\\[25pt]
 Cette SAÉ propose à l'étudiant de s'initier au développement d'une
 application Web en le plaçant dans un contexte de réponse à un appel
 d'offres~: un client cherche un prestataire pour développer une
