Suppression de l'italique dans le "trace pour le portfolio"

--- a/latex/modeles/tableau_sae.tex
+++ b/latex/modeles/tableau_sae.tex
@@ -115,8 +115,7 @@
 	\begin{tabular}[t]{@{}P@{}}
 	\textcolor{saeC}{\bfseries Type de livrable ou} \\
 	\textcolor{saeC}{\bfseries de production} \\
-	\textcolor{saeC}{\itshape (traces pour le} \\
-	\textcolor{saeC}{\itshape portfolio)} \\
+	\textcolor{saeC}{\small (traces pour le portfolio)} \\
 	\end{tabular}
 }
 & \tableauChampLong{\csname Slivrables\CODE\endcsname} \\
