Suppresion de l'italique dans la liste des exemples

--- a/latex/modeles/affichages.tex
+++ b/latex/modeles/affichages.tex
@@ -59,7 +59,8 @@
 											\xdef\exemplecode{\currentSAE\Alph{noexemple}}
 											%\xdef\titreexemple{\csname ESname\exemplecode\endcsname}
 											& 
-											\itshape \hyperlink{exemple:\exemplecode}{\textcolor{exempleC}{Exemple \arabic{noexemple}}}~: 
+											%\itshape 
+											\hyperlink{exemple:\exemplecode}{\textcolor{exempleC}{Exemple \arabic{noexemple}}}~: 
 											{\csname ESname\exemplecode\endcsname}
 											&
                                         \pageref{lab\currentSAE\Alph{noexemple}}
