--- a/latex/modeles/tableau_sae.tex
+++ b/latex/modeles/tableau_sae.tex
@@ -101,8 +101,9 @@
 \hline
 { \setlength{\extrarowheight}{0pt}
 	\begin{tabular}[t]{@{}P@{}}
-	\textcolor{saeC}{\bfseries Ressources mobilisées} \\
-	\textcolor{saeC}{\bfseries et combinées} \\
+	\textcolor{saeC}{\bfseries Ressources} \\
+	\textcolor{saeC}{\bfseries mobilisées et} \\
+	\textcolor{saeC}{\bfseries combinées} \\
 	\end{tabular}
 }
 & \listeRessources{\CODE} \\
