Ajout page présentation formation + update coefs + corrections fiches

--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -41,12 +41,12 @@ On pourra faire un focus particulier sur les points suivants.
   identifiants de réseaux sociaux, \ldots.
 \item
   Analyser les trames non chiffrées des protocoles (\textabbrv{TELNET}, \textabbrv{FTP}, \textabbrv{SMTP},
-  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \ldots) avec Wireshark,
-  en extraire des champs significatifs avec Analyse/Follow/\textabbrv{TCP} Stream
-  (ou \textabbrv{HTTP} Stream)\,; on peut utiliser
-  un site Web (création personnelle ou sur Internet) contenant un
-  formulaire d'enregistrement (ex:
-  \url{http://www.supportduweb.com/signup.html})\,;
+  \textabbrv{POP}, \textabbrv{IMAP}, \textabbrv{RTP}, \textabbrv{HTTP}, \ldots) avec
+  Wireshark, en extraire des champs significatifs avec
+  Analyse/Follow/\textabbrv{TCP} Stream (ou \textabbrv{HTTP} Stream)\,; par
+  exemple on peut utiliser un site Web (création personnelle locale ou
+  sur Internet) contenant un formulaire
+  d'enregistrement.
 \item
   Utiliser des outils de codage de l'information (ex:
   \url{https://www.dcode.fr/fr}).
