--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -10,7 +10,7 @@
 %% Les compétences et les ACs
 \ajoutScompetence{RT1-Administrer}{\niveauA}
 
-\ajoutScoeff{32}
+\ajoutScoeff{33}
 
 \ajoutSac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 \ajoutSac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
@@ -65,4 +65,4 @@ synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseau local, Connexion Internet, Équipements actifs.}
+\ajoutSmotscles{Réseau local, connexion Internet, équipements actifs.}
