--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -16,7 +16,7 @@ Il s'agit de comprendre l'agencement des briques réseaux (accès au
 réseau Internet, Box en général), des équipements (routeur, switch,
 firewall, WiFi), des terminaux (\textabbrv{PC}, smartphone, imprimantes, consoles de
 jeux, media-center, \textabbrv{NAS}, \ldots) et des protocoles (\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}, Mail,
-Web, \ldots) qui permettent leur fonctionnement.\\[25pt]
+Web, \ldots) qui permettent leur fonctionnement.\\
 On peut s'appuyer sur le réseau domestique de chaque étudiant avec une
 Box d'accès Internet (\textabbrv{xDSL}, \textabbrv{FO}), ou bien une maquette TP avec un routeur
 de sortie accédant à Internet via les ressources informatiques du
@@ -25,14 +25,16 @@ le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{D
 On peut également faire paramétrer un adressage \textabbrv{IP}v4 statique sur un
 poste client.On peut s'appuyer sur les commandes de base~: ipconfig,
 ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
-Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\[25pt]
+Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
-Publique~: \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\[25pt]
+Publique par ex:
+\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
-distribution Linux Kali en \textabbrv{VM} avec l'outil nmap pour découvrir (en
-interne) les ports ouverts sur les équipements du réseau local
-domestique. Bien expliquer que l'usage de cet outil de test de
-pénétration doit être réalisé en respectant l'éthique.\\[3pt]
+distribution Linux Kali en \textabbrv{VM} avec l'outil nmap
+(\url{https://nmap.org/}) pour découvrir (en interne) les ports ouverts
+sur les équipements du réseau local domestique. Bien expliquer que
+l'usage de cet outil de test de pénétration doit être réalisé en
+respectant l'éthique.\\[3pt]
 }
 
 \ajoutESformes{TP, projet\\[3pt]}
