--- a/latex/competences/CCB.tex
+++ b/latex/competences/CCB.tex
@@ -47,6 +47,6 @@ Les réseaux informatiques ou de télécommunications s’appuient sur des infra
 
 \ajoutapprentissage{AC0231}{Déployer un système de communication pour l’entreprise}
 \ajoutapprentissage{AC0232}{Déployer un réseau d’accès sans fil pour le réseau d’entreprise en intégrant les enjeux de la sécurité}
-\ajoutapprentissage{AC0233}{Déployer un réseau d’accès fixes ou mobile pour un opérateur de télécommunications en intégrant la sécurité}
+\ajoutapprentissage{AC0233}{Déployer un réseau d’accès fixes ou mobiles pour un opérateur de télécommunications en intégrant la sécurité}
 \ajoutapprentissage{AC0234}{Permettre aux collaborateurs de se connecter de manière sécurisée au système d'information de l'entreprise}
 \ajoutapprentissage{AC0235}{Collaborer en mode projet en français et en anglais}
