Ajout ECTS (fichier config et tableaux)

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -267,7 +267,7 @@ Ces activités peuvent être élargies, avec une  spécialisation vers :
 
 \scalebox{0.95}{\input{synthese/S1_acs_vs_saes_ressources.tex}}
 
-\subsection{Volumes horaires et coefficients du semestre 1}
+\subsection{Volumes horaires, coefficients et ECTS du semestre 1}
 
 \input{synthese/S1_coeffs_saes_ressources.tex}
 
@@ -301,7 +301,7 @@ Ces activités peuvent être élargies, avec une  spécialisation vers :
 
 \scalebox{0.95}{\input{synthese/S2_acs_vs_saes_ressources.tex}}
 
-\subsection{Volumes horaires et coefficients du semestre 2}
+\subsection{Volumes horaires, coefficients et ECTS du semestre 2}
 
 \input{synthese/S2_coeffs_saes_ressources.tex}
 
