--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -78,6 +78,13 @@
 \hline \textcolor{ressourceC}{R214} & 
 \begin{tabular}{p{5.7cm}}\tiny{Analyse mathématique des signaux} \end{tabular} & 
 24h & 6h &  & 3 & 8 & \\ 
-\hline \hline \multicolumn{5}{|l}{\bfseries Total}
+\hline \hline \multicolumn{5}{|l|}{\bfseries Total}
 \\ 
-\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{69} & \textit{57} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 115} & {\bfseries 95} & {\bfseries 90}\\ \hline\end{tabular}
+\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{69} & \textit{57} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 115} & {\bfseries 95} & {\bfseries 90}\\ \hline\multicolumn{5}{l}{~}\\
+\multicolumn{5}{l}{\bfseries Crédits ECTS}\\
+\hline
+\multicolumn{5}{|l|}{} & RT1 & RT2 & \multicolumn{1}{c|}{RT3} \\
+    \hline
+\multicolumn{5}{|l|}{} & 11 & 10 & 9 \\
+    \hline
+    \end{tabular}
