--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -87,6 +87,13 @@
 \hline \textcolor{ressourceC}{R115} & 
 \begin{tabular}{p{5.7cm}}\tiny{Gestion de projet} \end{tabular} & 
 8h & 4h &  &  & 2 & 4\\ 
-\hline \hline \multicolumn{5}{|l}{\bfseries Total}
+\hline \hline \multicolumn{5}{|l|}{\bfseries Total}
 \\ 
-\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{49} & \textit{33} & \textit{42}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{73} & \textit{49} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 122} & {\bfseries 82} & {\bfseries 96}\\ \hline\end{tabular}
+\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{49} & \textit{33} & \textit{42}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{73} & \textit{49} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 122} & {\bfseries 82} & {\bfseries 96}\\ \hline\multicolumn{5}{l}{~}\\
+\multicolumn{5}{l}{\bfseries Crédits ECTS}\\
+\hline
+\multicolumn{5}{|l|}{} & RT1 & RT2 & \multicolumn{1}{c|}{RT3} \\
+    \hline
+\multicolumn{5}{|l|}{} & 12 & 8 & 10 \\
+    \hline
+    \end{tabular}
