Meilleure détections des liens pour résoudre le pb du paragraphe manquant trouvé par Fabrice

--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -27,7 +27,12 @@ poste client.On peut s'appuyer sur les commandes de base~: ipconfig,
 ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
 Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
-Publique par ex:
+Publique par ex: \url{http://www.monip.org/} ,
+\url{https://dnschecker.org/ip-location.php} et également les
+performances (débits montants/descendants et latence du réseau)
+\url{https://www.degrouptest.com/test-debit.php.On} peut faire découvrir
+l'application Android WiFi Analyser pour lister les points d'accès à
+proximité ou les fréquences utilisées~:
 \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
 distribution Linux Kali en \textabbrv{VM} avec l'outil nmap
