Résout le pb de détection des URL identifiés par Anne-So

--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -30,10 +30,10 @@ On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
 Publique par ex: \url{http://www.monip.org/} ,
 \url{https://dnschecker.org/ip-location.php} et également les
 performances (débits montants/descendants et latence du réseau)
-\url{https://www.degrouptest.com/test-debit.php.On} peut faire découvrir
-l'application Android WiFi Analyser pour lister les points d'accès à
-proximité ou les fréquences utilisées~:
-\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer.}\\
+\url{https://www.degrouptest.com/test-debit.php}.\\
+On peut faire découvrir l'application Android WiFi Analyser pour lister
+les points d'accès à proximité ou les fréquences utilisées~:
+\url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer}.\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
 distribution Linux Kali en \textabbrv{VM} avec l'outil nmap
 (\url{https://nmap.org/}) pour découvrir (en interne) les ports ouverts
@@ -54,6 +54,6 @@ recette ou une présentation type powerpoint. Un bilan de consommation
 peut être complété par les informations provenant d'un compteur
 électrique intelligent.\\
 On peut utiliser un logiciel de dessin technique (type
-\url{https://app.diagrams.net,} Microsoft Visio ou Lucidchart) pour les
+\url{https://app.diagrams.net}, Microsoft Visio ou Lucidchart) pour les
 schémas réseaux en utilisant à bon escient les symboles et pictogrammes
 (switch, routeur, firewall, WiFi, \ldots).\\[3pt]}
