Détection des commandes (d'après motscles.yaml) pour mise en forme en texttt

--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -74,7 +74,7 @@ précédemment.\\[3pt]}
 \item
   Consulter et modifier les variables d'environnement
 \item
-  Commandes réseau (wget, curl, ping, traceroute, netstat, nmap)
+  Commandes réseau (wget, curl, \texttt{ping}, \texttt{traceroute}, netstat, \texttt{nmap})
 \item
   Initiation aux scripts pour l'automatisation de séquences de
   commandes, aux structures de contrôle
