--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -23,8 +23,8 @@ de sortie accédant à Internet via les ressources informatiques du
 département.On peut caractériser simplement l'adressage \textabbrv{IP}v4 dynamique,
 le masque de sous-réseaux, la passerelle par défaut, les serveurs \textabbrv{DNS}.
 On peut également faire paramétrer un adressage \textabbrv{IP}v4 statique sur un
-poste client.On peut s'appuyer sur les commandes de base~: ipconfig,
-ifconfig, ip, ping, arp, traceroute, arp-scan (ArpCacheWatch sous
+poste client.On peut s'appuyer sur les commandes de base~: \texttt{ipconfig},
+\texttt{ifconfig}, \texttt{ip}, \texttt{ping}, \texttt{arp}, \texttt{traceroute}, arp-scan (ArpCacheWatch sous
 Windows) pour lister les adresses \textabbrv{MAC} présentes dans le réseau local.\\
 On peut faire découvrir les outils pour connaître son adresse \textabbrv{IP}
 Publique par ex: \url{http://www.monip.org/} ,
@@ -35,7 +35,7 @@ On peut faire découvrir l'application Android WiFi Analyser pour lister
 les points d'accès à proximité ou les fréquences utilisées~:
 \url{https://github.com/VREMSoftwareDevelopment/WiFiAnalyzer}.\\
 Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
-distribution Linux Kali en \textabbrv{VM} avec l'outil nmap
+distribution Linux Kali en \textabbrv{VM} avec l'outil \texttt{nmap}
 (\url{https://nmap.org/}) pour découvrir (en interne) les ports ouverts
 sur les équipements du réseau local domestique. Bien expliquer que
 l'usage de cet outil de test de pénétration doit être réalisé en
