--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -20,7 +20,7 @@ réseau autonome réel ou simulé qui comportera quelques éléments actifs,
 serveurs et clients opérationnels.\\
 Cette étude permettra de se familiariser avec l'utilisation des
 principaux outils utilisés tout autant par les hackers que par les
-administrateurs des systèmes (nmap, john the ripper, burp suite, scapy,
+administrateurs des systèmes (\texttt{nmap}, john the ripper, burp suite, scapy,
 metasploit, \ldots) afin d'exploiter les vulnérabilités volontairement
 introduites dans la configuration.\\
 La maquette devra illustrer les techniques d'exploitations d'un nombre
