--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -27,28 +27,28 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ11}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ12}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ13}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ14}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ15}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ16}}
+\rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ11}{\textcolor{saeC}{SAÉ11}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ12}{\textcolor{saeC}{SAÉ12}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ13}{\textcolor{saeC}{SAÉ13}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ14}{\textcolor{saeC}{SAÉ14}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ15}{\textcolor{saeC}{SAÉ15}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ16}{\textcolor{saeC}{SAÉ16}}}
 
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R101}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R102}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R103}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R104}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R105}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R106}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R107}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R108}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R109}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R110}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R111}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R112}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R113}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R114}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R115}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R101}{\textcolor{ressourceC}{R101}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R102}{\textcolor{ressourceC}{R102}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R103}{\textcolor{ressourceC}{R103}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R104}{\textcolor{ressourceC}{R104}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R105}{\textcolor{ressourceC}{R105}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R106}{\textcolor{ressourceC}{R106}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R107}{\textcolor{ressourceC}{R107}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R108}{\textcolor{ressourceC}{R108}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R109}{\textcolor{ressourceC}{R109}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R110}{\textcolor{ressourceC}{R110}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R111}{\textcolor{ressourceC}{R111}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R112}{\textcolor{ressourceC}{R112}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R113}{\textcolor{ressourceC}{R113}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R114}{\textcolor{ressourceC}{R114}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R115}{\textcolor{ressourceC}{R115}}}
 
 \\ 
 \hline 
