--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -24,25 +24,25 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ21}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ22}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ23}}
- & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ24}}
+\rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ21}{\textcolor{saeC}{SAÉ21}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ22}{\textcolor{saeC}{SAÉ22}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ23}{\textcolor{saeC}{SAÉ23}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ24}{\textcolor{saeC}{SAÉ24}}}
 
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R201}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R202}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R203}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R204}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R205}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R206}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R207}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R208}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R209}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R210}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R211}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R212}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R213}}
- & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R214}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R201}{\textcolor{ressourceC}{R201}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R202}{\textcolor{ressourceC}{R202}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R203}{\textcolor{ressourceC}{R203}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R204}{\textcolor{ressourceC}{R204}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R205}{\textcolor{ressourceC}{R205}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R206}{\textcolor{ressourceC}{R206}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R207}{\textcolor{ressourceC}{R207}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R208}{\textcolor{ressourceC}{R208}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R209}{\textcolor{ressourceC}{R209}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R210}{\textcolor{ressourceC}{R210}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R211}{\textcolor{ressourceC}{R211}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R212}{\textcolor{ressourceC}{R212}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R213}{\textcolor{ressourceC}{R213}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{res:R214}{\textcolor{ressourceC}{R214}}}
 
 \\ 
 \hline 
