--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -4,17 +4,17 @@
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
  & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\textcolor{compCA}{\bfseries RT1} - Administrer les réseaux et l'Internet\\ 
+\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1}} - Administrer les réseaux et l'Internet\\ 
  \small Niveau 1 - Assister l'administrateur du réseau
 \end{tabular}
 }
  & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\textcolor{compCB}{\bfseries RT2} - Connecter les entreprises et les usagers\\ 
+\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2}} - Connecter les entreprises et les usagers\\ 
  \small Niveau 1 - Découvrir les transmissions et la ToIP
 \end{tabular}
 }
  & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\textcolor{compCC}{\bfseries RT3} - Créer des outils et applications informatiques pour les R\&T\\ 
+\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3}} - Créer des outils et applications informatiques pour les R\&T\\ 
  \small Niveau 1 - S'intégrer dans un service informatique
 \end{tabular}
 }
@@ -22,69 +22,69 @@
 \\ 
 \hline\hline\multicolumn{5}{|l}{\textcolor{saeC}{\bfseries SAÉs}}
 \\ 
-\hline \textcolor{saeC}{SAÉ11} & 
+\hline \hyperlink{sae:SAÉ11}{\textcolor{saeC}{SAÉ11}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité} \end{tabular} & 
 2h & 5h & 12h & 16 &  & \\ 
-\hline \textcolor{saeC}{SAÉ12} & 
+\hline \hyperlink{sae:SAÉ12}{\textcolor{saeC}{SAÉ12}} & 
 \begin{tabular}{p{5.7cm}} \tiny{S'initier aux réseaux informatiques} \end{tabular} & 
 3h & 7h & 20h & 33 &  & \\ 
-\hline \textcolor{saeC}{SAÉ13} & 
+\hline \hyperlink{sae:SAÉ13}{\textcolor{saeC}{SAÉ13}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Découvrir un dispositif de transmission} \end{tabular} & 
 2h & 5h & 16h &  & 33 & \\ 
-\hline \textcolor{saeC}{SAÉ14} & 
+\hline \hyperlink{sae:SAÉ14}{\textcolor{saeC}{SAÉ14}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Se présenter sur Internet} \end{tabular} & 
 2h & 8h & 12h &  &  & 16\\ 
-\hline \textcolor{saeC}{SAÉ15} & 
+\hline \hyperlink{sae:SAÉ15}{\textcolor{saeC}{SAÉ15}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Traiter des données} \end{tabular} & 
 2h & 8h & 20h &  &  & 26\\ 
-\hline \textcolor{saeC}{SAÉ16} & 
+\hline \hyperlink{sae:SAÉ16}{\textcolor{saeC}{SAÉ16}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
   & 3h &   & 0 & 0 & 0\\ 
 \hline \multicolumn{5}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
-\hline \textcolor{ressourceC}{R101} & 
+\hline \hyperlink{res:R101}{\textcolor{ressourceC}{R101}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation aux réseaux informatiques} \end{tabular} & 
 22h & 24h &  & 12 & 4 & 4\\ 
-\hline \textcolor{ressourceC}{R102} & 
+\hline \hyperlink{res:R102}{\textcolor{ressourceC}{R102}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Principes et architecture des réseaux} \end{tabular} & 
 12h & 15h &  & 12 &  & \\ 
-\hline \textcolor{ressourceC}{R103} & 
+\hline \hyperlink{res:R103}{\textcolor{ressourceC}{R103}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Réseaux locaux et équipements actifs} \end{tabular} & 
 11h & 16h &  & 8 & 4 & 0\\ 
-\hline \textcolor{ressourceC}{R104} & 
+\hline \hyperlink{res:R104}{\textcolor{ressourceC}{R104}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Fondamentaux des systèmes électroniques} \end{tabular} & 
 15h & 18h &  & 8 & 5 & \\ 
-\hline \textcolor{ressourceC}{R105} & 
+\hline \hyperlink{res:R105}{\textcolor{ressourceC}{R105}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Supports de transmission pour les réseaux locaux} \end{tabular} & 
 6h & 6h &  &  & 5 & \\ 
-\hline \textcolor{ressourceC}{R106} & 
+\hline \hyperlink{res:R106}{\textcolor{ressourceC}{R106}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Architecture des systèmes numériques et informatiques} \end{tabular} & 
 12h & 12h &  & 10 &  & \\ 
-\hline \textcolor{ressourceC}{R107} & 
+\hline \hyperlink{res:R107}{\textcolor{ressourceC}{R107}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Fondamentaux de la programmation} \end{tabular} & 
 11h & 30h &  &  &  & 22\\ 
-\hline \textcolor{ressourceC}{R108} & 
+\hline \hyperlink{res:R108}{\textcolor{ressourceC}{R108}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Bases des systèmes d'exploitation} \end{tabular} & 
 6h & 21h &  & 6 &  & 7\\ 
-\hline \textcolor{ressourceC}{R109} & 
+\hline \hyperlink{res:R109}{\textcolor{ressourceC}{R109}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Introduction aux technologies Web} \end{tabular} & 
 4h & 5h &  &  &  & 4\\ 
-\hline \textcolor{ressourceC}{R110} & 
+\hline \hyperlink{res:R110}{\textcolor{ressourceC}{R110}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Anglais de communication et initiation au vocabulaire technique} \end{tabular} & 
 10h & 20h &  & 3 & 5 & 5\\ 
-\hline \textcolor{ressourceC}{R111} & 
+\hline \hyperlink{res:R111}{\textcolor{ressourceC}{R111}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Expression-Culture-Communication Professionnelles 1} \end{tabular} & 
 9h & 21h &  & 3 & 5 & 4\\ 
-\hline \textcolor{ressourceC}{R112} & 
+\hline \hyperlink{res:R112}{\textcolor{ressourceC}{R112}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Projet Personnel et Professionnel} \end{tabular} & 
 3h & 12h &  & 2 & 3 & 4\\ 
-\hline \textcolor{ressourceC}{R113} & 
+\hline \hyperlink{res:R113}{\textcolor{ressourceC}{R113}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Mathématiques du signal} \end{tabular} & 
 24h & 6h &  & 5 & 8 & \\ 
-\hline \textcolor{ressourceC}{R114} & 
+\hline \hyperlink{res:R114}{\textcolor{ressourceC}{R114}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Mathématiques des transmissions} \end{tabular} & 
 24h & 6h &  & 4 & 8 & \\ 
-\hline \textcolor{ressourceC}{R115} & 
+\hline \hyperlink{res:R115}{\textcolor{ressourceC}{R115}} & 
 \begin{tabular}{p{5.7cm}}\tiny{Gestion de projet} \end{tabular} & 
 8h & 4h &  &  & 2 & 4\\ 
 \hline \hline \multicolumn{5}{|l|}{\bfseries Total}
