Règle le pb de la page blanche dans la SAE15

--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -48,8 +48,8 @@ pour exécuter un programme ou configurer les éléments d'un site Web~:
 compétence «Créer des outils et applications informatiques pour les
 R\&T» (RT3). Elle vise également l'emploi des principales commandes
 réseau, dans des scripts simples. Ces commandes sont les bases d'appui
-pour administrer - par la suite - un réseau et de ses services~:
-compétence «Administrer les réseaux et l'Internet» (RT1).\\
+pour administrer - par la suite - un réseau et ses services~: compétence
+«Administrer les réseaux et l'Internet» (RT1).\\
 Elle contribue donc aux apprentissages critiques mentionnés
 précédemment.\\[3pt]}
 
