--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -14,12 +14,10 @@
   de caractériser un support de transmission par différentes mesures
   (retard de propagation, atténuation,
   continuité, échos, bruit, perturbations, \ldots) en vu d'identifier un
-  défaut\,;
+  défaut, voire de certifier un câblage
+  \textabbrv{LAN} et de comprendre les principaux critères de choix d'un support
 \item
-  voire de certifier un câblage \textabbrv{LAN} cuivre de comprendre les principaux
-  critères de choix d'un support
-  et/ou de savoir présenter des résultats à un client ou un
-  collaborateur.
+  savoir présenter des résultats à un client ou un collaborateur.
 \end{itemize}
 L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
 pour identifier et caractériser un support et savoir rédiger un
