--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -33,8 +33,8 @@ importante dans la carrière d'un professionnel R\&T~: elle joue un rôle
 dans sa recherche d'emploi avec la valorisation de ses expériences
 professionnelles comme personnelles. Elle peut également intervenir en
 entreprise~: certaines prévoient - dans un annuaire sur l'intranet - des
-``pages personnelles'' renseignées par les salariés pour y présenter
-leurs activités et dynamiser les interactions entre collaborateurs. Elle
+pages personnelles renseignées par les salariés pour y présenter leurs
+activités et dynamiser les interactions entre collaborateurs. Elle
 contribue également à développer son réseau professionnel et social,
 avec lequel il peut partager ses centres d'intérêt.\\
 Le professionnel R\&T doit donc savoir se présenter sur Internet, tout
