--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -35,16 +35,16 @@
 \ajoutSdescription{Le professionnel R\&T est régulièrement amené à traiter des données
 provenant du système d'information de l'entreprise pour ses besoins
 personnels ou ceux de ses collaborateurs. Ces données peuvent par
-exemple être liées à l'infrastructure réseau qu'il administre (état des
-équipements, des machines) ou aux utilisateurs du réseau. Généralement
-obtenues sous forme brute, elles sont ensuite traitées avec des
-objectifs très variés (nettoyage des données, extraction d'informations
-comptables , archivage, \ldots) pour être réutilisées à d'autres fins ou
-être présentées dans des vues synthétiques. Ces traitements peuvent être
+exemple être liées à l'infrastructure de son réseau (état des
+équipements, des machines) ou aux utilisateurs. Généralement obtenues
+sous forme brute, elles sont ensuite traitées avec des objectifs très
+variés (nettoyage des données, extraction d'informations comptables,
+archivage, \ldots) pour être réutilisées à d'autres fins ou être
+présentées dans des vues synthétiques. Ces traitements peuvent être
 récurrents (mensualisation de bilan, sauvegarde de données périodique,
-\ldots) gagnent à être automatisés.\\
-Le professionnel R\&T doit donc développer des scripts ou des programmes
-pour gérer de façon efficace le traitement de ces données.\\[3pt]}
+\ldots) et gagnent à être automatisés. Le professionnel R\&T doit donc
+développer des scripts ou des programmes pour gérer de façon efficace le
+traitement de ces données.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R107}{Fondamentaux de la programmation}
