--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -25,7 +25,7 @@ données, par exemple~:
 Dans ce contexte, le professionnel R\&T est amené à collecter des
 données, les traiter pour en extraire une représentation
 exploitable/parlante, puis en publier la présentation. L'objectif global
-est d'automatiser au mieux les différentes étapes de son travail.\\[3pt]}
+est d'automatiser au mieux les différentes étapes de son travail.}
 
 \ajoutESdescription{
 L'étudiant s'initiera aux différentes étapes d'un projet informatique~:
@@ -51,8 +51,8 @@ différentes étapes~:
   \item
     vérification de la connectivité, des droits d'accès\,;
   \item
-    mise en place et configuration d'un système de versionnement (par
-    ex: git, svn), etc.
+    mise en place et configuration d'un système de versionnement (git,
+    svn), etc.
   \end{itemize}
 \item
   Acquérir des données (locales ou distantes) en les enregistrant dans
